logs/Slang/generated/hdlconv/hdlconvertor_p621.sv.log
name: hdlconvertor_p621
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p621.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p621.sv:8:1: error: use of undeclared identifier '$readmemb'
$readmemb("array.dat", mem);
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p621.sv:11:1: error: use of undeclared identifier '$async$and$array'
$async$and$array(mem,{a1,a2,a3,a4,a5,a6,a7},{b1,b2,b3});
^~~~~~~~~~~~~~~~
